freebsd-glue (0.1.12) UNRELEASED; urgency=low

  * Fix improper allocation in funopen(). (Closes: #726970)
  * Add _PATH_UFSSUSPEND.
  * Add arc4random_stir() prototype (for libbsd).

 -- Robert Millan <rmh@debian.org>  Sat, 26 Oct 2013 00:27:03 +0200

freebsd-glue (0.1.11) unstable; urgency=low

  * Fix unresolved dependencies on libc hidden symbols (_open, _read,
    _close), libdb and cpuset family of functions.
  * Add zlib1g-dev to Build-Depends and Depends.
  * getosreldate.c: Move mib and size to kFreeBSD-specific area.

 -- Robert Millan <rmh@debian.org>  Sun, 20 Oct 2013 15:14:22 +0200

freebsd-glue (0.1.10) unstable; urgency=low

  * Add libdb-dev to Depends / Build-Depends.

 -- Robert Millan <rmh@debian.org>  Sun, 20 Oct 2013 12:56:14 +0200

freebsd-glue (0.1.9) unstable; urgency=low

  * Build with full -Werror.
  * Implement funopen(), fropen() and fwopen().
  * Add zopen().
  * New headers: grp.h, db.h (as <db_185.h> stub).
  * Add _PATH_ETC.
  * Fix stdlib.h indirect load of libutil.h.
  * Add cget* family of functions.
  * Add getloginclass() and setloginclass() kernel calls.
  * Add dummy crypt_get_format() and crypt_set_format().

 -- Robert Millan <rmh@debian.org>  Sun, 20 Oct 2013 02:08:57 +0200

freebsd-glue (0.1.8) unstable; urgency=low

  * Change header protectionin <rpc/xdr.h> to avoid collision with
    glibc's.

 -- Robert Millan <rmh@debian.org>  Sun, 06 Oct 2013 15:03:15 +0200

freebsd-glue (0.1.7) unstable; urgency=low

  * Fix minor formatting error in setfstab().
  * Add <rpc/xdr.h>.

 -- Robert Millan <rmh@debian.org>  Sun, 06 Oct 2013 14:37:43 +0200

freebsd-glue (0.1.6) unstable; urgency=low

  * Define __FreeBSD_version as __FreeBSD_kernel_version when available.
  * Implement setfib, setfstab (as ENOSYS stub) and getfstab (with
    hardcoded return value).

 -- Robert Millan <rmh@debian.org>  Thu, 03 Oct 2013 01:11:03 +0200

freebsd-glue (0.1.5) unstable; urgency=low
