@@ -3,6 +3,7 @@ freebsd-glue (0.1.12) UNRELEASED; urgency=low
   * Fix improper allocation in funopen(). (Closes: #726970)
   * Add _PATH_UFSSUSPEND.
   * Add arc4random_stir() prototype (for libbsd).
+  * Work around broken macro argument in TAILQ_FOREACH_REVERSE_SAFE
 
  -- Robert Millan <rmh@debian.org>  Sat, 26 Oct 2013 00:27:03 +0200
 
